--- a/templates/shared/_navbar.html
+++ b/templates/shared/_navbar.html
@@ -18,7 +18,7 @@
                         <a class="nav-link" href="{% url 'account_logout' %}">로그아웃</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">마이페이지</a>
+                        <a class="nav-link" href="{% url 'users:mypage' user.id %}">마이페이지</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
